# MiniChessVovka

./: .bot_heartbeat  .editorconfig  .env.example  .gitattributes  .gitignore  AI_AVAILABILITY_STATUS.md  AI_IMPROVEMENTS.md  AUTOTRAINING_FILES.txt  AUTOTRAINING_SETUP.md  AUTO_TRAINING_README.md  CHANGELOG_SELF_PLAY.md  FIXED_AND_READY.md  HEALTH_DASHBOARD_UPDATE.md  IMPROVEMENTS.md  LICENSE  QUALITY_IMPROVEMENTS.md  QUICK_GUIDE.txt  QUICK_SETUP.md  QUICK_START.md  README.md  README_AI.md  SELF_PLAY_README.md  SETUP_COMPLETE.md  STATUS.md  STATUS_FINAL.md  ai.py  ai_py_backup.py  autorun_training.sh  bot_start.sh  bot_stop.sh  check_training_health.sh  config.py  gamestate.py  gui.py  main.py  minichesstrain-start.service  minichesstrain-start.timer  minichesstrain-stop.service  minichesstrain-stop.timer  minichesstrain.service  (+32 more)
.factory/: settings.json
docs/: ARCHITECTURE.md  evaluation_strategy.md  outreach-checklist.md  outreach-chesscom-ru.md  outreach-lichess-ru.md
engine/: env.py
engine_rs/: Cargo.toml
engine_rs/src/: cache.rs  eval.rs  gamestate.rs  lib.rs  search.rs  types.rs  zobrist.rs
nn/: mcts.py  model.py
src/: ai.py  gamestate.py  main.py  pieces.py  scheduled_self_play.py  self_play.py
tests/: test_ai_optimization.py  test_nightly.py
